[tool.poetry]
name = "chainlit-demo"
version = "0.1.0"
description = ""
authors = ["Mike Woodring <mike.woodring@codepath.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
chainlit = "^1.3.2"
pydantic = "=2.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
